--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -15,8 +15,11 @@ build_script:
 test: off
 
 artifacts:
-  - path: .\Bin\net46
+  - path: .\bin\net46
     name: UnityFx.AppStates-net46
+
+	- path: .\bin\netstandard2.0
+    name: UnityFx.AppStates-netstandard2.0
 
 dotnet_csproj:
   patch: true
