--- a/src/UnityFx.App/UnityFx.App.csproj
+++ b/src/UnityFx.App/UnityFx.App.csproj
@@ -13,6 +13,7 @@
 		<Version>0.2.0</Version>
 		<AssemblyVersion>0.2.0.0</AssemblyVersion>
 		<FileVersion>0.2.0.0</FileVersion>
+		<CodeAnalysisRuleSet>../UnityFx.ruleset</CodeAnalysisRuleSet>
 	</PropertyGroup>
 
 	<PropertyGroup>
@@ -26,4 +27,12 @@
 		</Reference>
 	</ItemGroup>
 
+	<ItemGroup>
+		<PackageReference Include="StyleCop.Analyzers" Version="1.1.0-beta004" PrivateAssets="All" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<AdditionalFiles Include="../stylecop.json" />
+	</ItemGroup>
+	
 </Project>
