--- a/src/UnityFx.AppStates/UnityFx.AppStates.csproj
+++ b/src/UnityFx.AppStates/UnityFx.AppStates.csproj
@@ -13,6 +13,7 @@
 		<Version>0.2.0</Version>
 		<AssemblyVersion>0.2.0.0</AssemblyVersion>
 		<FileVersion>0.2.0.0</FileVersion>
+		<CodeAnalysisRuleSet>../UnityFx.ruleset</CodeAnalysisRuleSet>
 	</PropertyGroup>
 
 	<PropertyGroup>
@@ -24,4 +25,11 @@
 	  <ProjectReference Include="..\UnityFx.App\UnityFx.App.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+			<PackageReference Include="StyleCop.Analyzers" Version="1.1.0-beta004" PrivateAssets="All" />
+	</ItemGroup>
+
+	<ItemGroup>
+			<AdditionalFiles Include="../stylecop.json" />
+	</ItemGroup>
 </Project>
