project structure refactoring + changed namespace to UnityFx.AppStates

--- a/src/UnityFx.AppStates.Api/UnityFx.AppStates.Api.csproj
+++ b/src/UnityFx.AppStates.Api/UnityFx.AppStates.Api.csproj
@@ -19,6 +19,7 @@
 	<PropertyGroup>
 		<GenerateDocumentationFile>true</GenerateDocumentationFile>
 		<NeutralLanguage>en-US</NeutralLanguage>
+		<RootNamespace>UnityFx.AppStates</RootNamespace>
 	</PropertyGroup>
 
 	<ItemGroup>
