--- a/src/UnityFx.AppStates/UnityFx.AppStates.csproj
+++ b/src/UnityFx.AppStates/UnityFx.AppStates.csproj
@@ -22,14 +22,14 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\UnityFx.App\UnityFx.App.csproj" />
-	</ItemGroup>
-
-	<ItemGroup>
 			<PackageReference Include="StyleCop.Analyzers" Version="1.1.0-beta004" PrivateAssets="All" />
 	</ItemGroup>
 
 	<ItemGroup>
 			<AdditionalFiles Include="../stylecop.json" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\UnityFx.AppStates.Api\UnityFx.AppStates.Api.csproj" />
 	</ItemGroup>
 </Project>
