--- a/src/UnityFx.AppStates.Api/UnityFx.AppStates.Api.csproj
+++ b/src/UnityFx.AppStates.Api/UnityFx.AppStates.Api.csproj
@@ -13,7 +13,7 @@
 		<Version>0.2.0</Version>
 		<AssemblyVersion>0.2.0.0</AssemblyVersion>
 		<FileVersion>0.2.0.0</FileVersion>
-		<CodeAnalysisRuleSet>../UnityFx.ruleset</CodeAnalysisRuleSet>
+		<CodeAnalysisRuleSet>../CodingConventions/Cs/CsharpRules.ruleset</CodeAnalysisRuleSet>
 	</PropertyGroup>
 
 	<PropertyGroup>
@@ -33,7 +33,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<AdditionalFiles Include="../stylecop.json" />
+		<AdditionalFiles Include="../CodingConventions/Common/stylecop.json" />
 	</ItemGroup>
-	
+
 </Project>
