--- a/src/UnityFx.AppStates.Core/UnityFx.AppStates.Core.csproj
+++ b/src/UnityFx.AppStates.Core/UnityFx.AppStates.Core.csproj
@@ -13,21 +13,13 @@
 		<Version>0.2.0</Version>
 		<AssemblyVersion>0.2.0.0</AssemblyVersion>
 		<FileVersion>0.2.0.0</FileVersion>
-		<CodeAnalysisRuleSet>../UnityFx.ruleset</CodeAnalysisRuleSet>
+		<CodeAnalysisRuleSet>../CodingConventions/Cs/CsharpRules.ruleset</CodeAnalysisRuleSet>
 	</PropertyGroup>
 
 	<PropertyGroup>
 		<GenerateDocumentationFile>true</GenerateDocumentationFile>
 		<NeutralLanguage>en-US</NeutralLanguage>
 	</PropertyGroup>
-
-	<ItemGroup>
-			<PackageReference Include="StyleCop.Analyzers" Version="1.1.0-beta004" PrivateAssets="All" />
-	</ItemGroup>
-
-	<ItemGroup>
-			<AdditionalFiles Include="../stylecop.json" />
-	</ItemGroup>
 
 	<ItemGroup>
 	  <ProjectReference Include="..\UnityFx.AppStates.Api\UnityFx.AppStates.Api.csproj" />
@@ -41,4 +33,13 @@
 	    <HintPath>..\Dependencies\UnityEngine.UI.dll</HintPath>
 	  </Reference>
 	</ItemGroup>
+
+	<ItemGroup>
+		<PackageReference Include="StyleCop.Analyzers" Version="1.1.0-beta004" PrivateAssets="All" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<AdditionalFiles Include="../CodingConventions/Common/stylecop.json" />
+	</ItemGroup>
+
 </Project>
