--- a/src/UnityFx.AppStates.Core/UnityFx.AppStates.Core.csproj
+++ b/src/UnityFx.AppStates.Core/UnityFx.AppStates.Core.csproj
@@ -42,4 +42,8 @@
 		<AdditionalFiles Include="../CodingConventions/Common/stylecop.json" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="Views\" />
+	</ItemGroup>
+
 </Project>
