--- a/src/UnityFx.AppStates.Api/UnityFx.AppStates.Api.csproj
+++ b/src/UnityFx.AppStates.Api/UnityFx.AppStates.Api.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>net46;netstandard2.0</TargetFrameworks>
+		<TargetFrameworks>net35;net46;netstandard2.0</TargetFrameworks>
 		<Description>Application tools for Unity3d.</Description>
 		<Company />
 		<Authors>Alexander Bogarsukov</Authors>
@@ -20,6 +20,14 @@
 		<GenerateDocumentationFile>true</GenerateDocumentationFile>
 		<NeutralLanguage>en-US</NeutralLanguage>
 		<RootNamespace>UnityFx.AppStates</RootNamespace>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(TargetFramework)' == 'net35'">
+		<DefineConstants>UNITYFX_SUPPORT_APM</DefineConstants>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(TargetFramework)' != 'net35'">
+		<DefineConstants>UNITYFX_SUPPORT_TAP</DefineConstants>
 	</PropertyGroup>
 
 	<ItemGroup>
