--- a/src/UnityFx.AppStates.Core/UnityFx.AppStates.Core.csproj
+++ b/src/UnityFx.AppStates.Core/UnityFx.AppStates.Core.csproj
@@ -43,7 +43,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="StyleCop.Analyzers" Version="1.1.0-beta004" PrivateAssets="All" />
+		<PackageReference Include="StyleCop.Analyzers" Version="1.1.0-beta006" PrivateAssets="All" />
+		<PackageReference Include="UnityFx.Async" Version="0.7.0-unstable0017" />
 	</ItemGroup>
 
 	<ItemGroup>
