--- a/src/UnityFx.AppStates.Tests/UnityFx.AppStates.Tests.csproj
+++ b/src/UnityFx.AppStates.Tests/UnityFx.AppStates.Tests.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net46;netstandard2.0</TargetFrameworks>
+    <TargetFrameworks>net46</TargetFrameworks>
   </PropertyGroup>
 
   <ItemGroup>
@@ -12,8 +12,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\UnityFx.AppStates.Api\UnityFx.AppStates.Api.csproj" />
-    <ProjectReference Include="..\UnityFx.AppStates.Core\UnityFx.AppStates.Core.csproj" />
+    <ProjectReference Include="..\UnityFx.AppStates.Core\UnityFx.AppStates.csproj" />
+    <ProjectReference Include="..\UnityFx.AppStates\UnityFx.AppStates.csproj" />
   </ItemGroup>
 
 </Project>
