Added UnityFx.Async to the AssetStore project + default view implementations

--- a/src/UnityFx.AppStates.AssetStore/UnityFx.AppStates.AssetStore.csproj
+++ b/src/UnityFx.AppStates.AssetStore/UnityFx.AppStates.AssetStore.csproj
@@ -23,6 +23,9 @@
 		<Reference Include="UnityEngine">
 			<HintPath>..\Dependencies\UnityEngine.dll</HintPath>
 		</Reference>
+		<Reference Include="UnityEngine.UI">
+		  <HintPath>..\Dependencies\UnityEngine.UI.dll</HintPath>
+		</Reference>
 		<ProjectReference Include="..\UnityFx.AppStates\UnityFx.AppStates.csproj" />
 	</ItemGroup>
 
