--- a/src/UnityFx.AppStates.DependencyInjection/UnityFx.AppStates.DependencyInjection.csproj
+++ b/src/UnityFx.AppStates.DependencyInjection/UnityFx.AppStates.DependencyInjection.csproj
@@ -2,33 +2,27 @@
 
 	<PropertyGroup>
 		<TargetFrameworks>net35;net46;netstandard2.0</TargetFrameworks>
-		<Description>Application states for Unity3d.</Description>
+		<Description>Application dependency injection tools for Unity3d.</Description>
 		<Company />
 		<Authors>Alexander Bogarsukov</Authors>
 		<PackageProjectUrl>https://github.com/Arvtesh/UnityFx.AppStates</PackageProjectUrl>
 		<RepositoryUrl>https://github.com/Arvtesh/UnityFx.AppStates</RepositoryUrl>
 		<RepositoryType>Git</RepositoryType>
-		<PackageTags>Unity3d;Application;States;FSM;MVC</PackageTags>
+		<PackageTags>Unity3d;Application;States;DependencyInjection</PackageTags>
 		<PackageLicenseUrl>https://github.com/Arvtesh/UnityFx.AppStates/blob/master/LICENSE.md</PackageLicenseUrl>
 		<PackageIconUrl></PackageIconUrl>
-		<Version>0.3.0</Version>
-		<AssemblyVersion>0.3.0.0</AssemblyVersion>
-		<FileVersion>0.3.0.0</FileVersion>
-		<InformationalVersion>0.3.0.0</InformationalVersion>
+		<Version>0.1.0</Version>
+		<AssemblyVersion>0.1.0.0</AssemblyVersion>
+		<FileVersion>0.1.0.0</FileVersion>
+		<InformationalVersion>0.1.0.0</InformationalVersion>
 		<GenerateDocumentationFile>true</GenerateDocumentationFile>
 		<NeutralLanguage>en-US</NeutralLanguage>
-		<RootNamespace>UnityFx.AppStates</RootNamespace>
+		<RootNamespace>UnityFx.AppStates.DependencyInjection</RootNamespace>
 		<CodeAnalysisRuleSet>../CodingConventions/Cs/CsharpRules.ruleset</CodeAnalysisRuleSet>
-	</PropertyGroup>
-
-	<PropertyGroup>
-		<GenerateDocumentationFile>true</GenerateDocumentationFile>
-		<NeutralLanguage>en-US</NeutralLanguage>
 	</PropertyGroup>
 
 	<ItemGroup>
 		<PackageReference Include="StyleCop.Analyzers" Version="1.1.0-beta008" PrivateAssets="All" />
-		<PackageReference Include="UnityFx.Async" Version="0.9.5" />
 	</ItemGroup>
 
 	<ItemGroup>
