Added UnityFx.AppStates.Common project and its tests

--- a/src/UnityFx.AppStates.AssetStore/UnityFx.AppStates.AssetStore.csproj
+++ b/src/UnityFx.AppStates.AssetStore/UnityFx.AppStates.AssetStore.csproj
@@ -26,6 +26,7 @@
 		<Reference Include="UnityEngine.UI">
 		  <HintPath>..\Dependencies\UnityEngine.UI.dll</HintPath>
 		</Reference>
+		<ProjectReference Include="..\UnityFx.AppStates.Common\UnityFx.AppStates.Common.csproj" />
 		<ProjectReference Include="..\UnityFx.AppStates.DependencyInjection\UnityFx.AppStates.DependencyInjection.csproj" />
 		<ProjectReference Include="..\UnityFx.AppStates\UnityFx.AppStates.csproj" />
 	</ItemGroup>
