Added UnityFx.AsppStates dependecy on UnityFx.AppStates.DependencyInjection

--- a/src/UnityFx.AppStates/UnityFx.AppStates.csproj
+++ b/src/UnityFx.AppStates/UnityFx.AppStates.csproj
@@ -35,6 +35,7 @@
 
 	<ItemGroup>
 	  <ProjectReference Include="..\UnityFx.AppStates.Common\UnityFx.AppStates.Common.csproj" />
+	  <ProjectReference Include="..\UnityFx.AppStates.DependencyInjection\UnityFx.AppStates.DependencyInjection.csproj" />
 	</ItemGroup>
 
 </Project>
