Massive solution refactoring

--- a/src/UnityFx.AppStates.AssetStore/UnityFx.AppStates.AssetStore.csproj
+++ b/src/UnityFx.AppStates.AssetStore/UnityFx.AppStates.AssetStore.csproj
@@ -28,12 +28,12 @@
 		  <HintPath>..\Dependencies\UnityEngine.UI.dll</HintPath>
 		</Reference>
 		<ProjectReference Include="..\UnityFx.AppStates.Common\UnityFx.AppStates.Common.csproj" />
-		<ProjectReference Include="..\UnityFx.AppStates.DependencyInjection\UnityFx.AppStates.DependencyInjection.csproj" />
 		<ProjectReference Include="..\UnityFx.AppStates\UnityFx.AppStates.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
 		<PackageReference Include="StyleCop.Analyzers" Version="1.1.0-beta006" PrivateAssets="All" />
+		<PackageReference Include="UnityFx.DependencyInjection" Version="0.1.0" />
 	</ItemGroup>
 
 	<ItemGroup>
