--- a/src/UnityFx.AppStates.Common.Tests/UnityFx.AppStates.Common.Tests.csproj
+++ b/src/UnityFx.AppStates.Common.Tests/UnityFx.AppStates.Common.Tests.csproj
@@ -2,6 +2,7 @@
 
 	<PropertyGroup>
 		<TargetFrameworks>net46</TargetFrameworks>
+		<IsPackable>false</IsPackable>
 	</PropertyGroup>
 
 	<ItemGroup>
