--- a/src/UnityFx.AppStates.Common/UnityFx.AppStates.Common.csproj
+++ b/src/UnityFx.AppStates.Common/UnityFx.AppStates.Common.csproj
@@ -17,6 +17,7 @@
 		<InformationalVersion>0.1.0.0</InformationalVersion>
 		<RootNamespace>UnityFx.AppStates.Common</RootNamespace>
 		<CodeAnalysisRuleSet>../CodingConventions/Cs/CsharpRules.ruleset</CodeAnalysisRuleSet>
+		<IsPackable>false</IsPackable>
 	</PropertyGroup>
 
 	<PropertyGroup>
