--- a/src/UnityFx.AppStates.Tests/UnityFx.AppStates.Tests.csproj
+++ b/src/UnityFx.AppStates.Tests/UnityFx.AppStates.Tests.csproj
@@ -1,7 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFrameworks>net46</TargetFrameworks>
+		<IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
