Removed view-related stuff

--- a/src/UnityFx.AppStates.AssetStore/UnityFx.AppStates.AssetStore.csproj
+++ b/src/UnityFx.AppStates.AssetStore/UnityFx.AppStates.AssetStore.csproj
@@ -40,4 +40,8 @@
 		<AdditionalFiles Include="../CodingConventions/Common/stylecop.json" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="Assets\Plugins\UnityFx.AppStates\Scripts\" />
+	</ItemGroup>
+
 </Project>
