--- a/src/UnityFx.AppStates.AssetStore/UnityFx.AppStates.AssetStore.csproj
+++ b/src/UnityFx.AppStates.AssetStore/UnityFx.AppStates.AssetStore.csproj
@@ -27,7 +27,6 @@
 		<Reference Include="UnityEngine.UI">
 		  <HintPath>..\..\unity\Dependencies\UnityEngine.UI.dll</HintPath>
 		</Reference>
-		<ProjectReference Include="..\UnityFx.AppStates\UnityFx.AppStates.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -38,6 +37,10 @@
 
 	<ItemGroup>
 		<AdditionalFiles Include="../CodingConventions/Common/stylecop.json" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\UnityFx.AppStates.Abstractions\UnityFx.AppStates.Abstractions.csproj" />
 	</ItemGroup>
 
 </Project>
