--- a/src/UnityFx.Mvc.Abstractions/UnityFx.Mvc.Abstractions.csproj
+++ b/src/UnityFx.Mvc.Abstractions/UnityFx.Mvc.Abstractions.csproj
@@ -15,7 +15,7 @@
 		<AssemblyVersion>0.3.0.0</AssemblyVersion>
 		<FileVersion>0.3.0.0</FileVersion>
 		<InformationalVersion>0.3.0.0</InformationalVersion>
-		<RootNamespace>UnityFx.AppStates</RootNamespace>
+		<RootNamespace>UnityFx.Mvc</RootNamespace>
 		<CodeAnalysisRuleSet>../CodingConventions/Cs/CsharpRules.ruleset</CodeAnalysisRuleSet>
 	</PropertyGroup>
 
