--- a/src/UnityFx.Mvc.Abstractions/UnityFx.Mvc.Abstractions.csproj
+++ b/src/UnityFx.Mvc.Abstractions/UnityFx.Mvc.Abstractions.csproj
@@ -25,7 +25,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="StyleCop.Analyzers" Version="1.1.0-beta009" PrivateAssets="All" />
+		<PackageReference Include="StyleCop.Analyzers" Version="1.1.118" PrivateAssets="All" />
 	</ItemGroup>
 
 	<ItemGroup>
