--- a/src/UnityFx.Mvc.AssetStore/UnityFx.Mvc.AssetStore.csproj
+++ b/src/UnityFx.Mvc.AssetStore/UnityFx.Mvc.AssetStore.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>net35;net46</TargetFrameworks>
+		<TargetFrameworks>net46</TargetFrameworks>
 		<Description>Asset Store code for UnityFx.Mvc.</Description>
 		<Company />
 		<Authors>Alexander Bogarsukov</Authors>
