--- a/src/UnityFx.Mvc/UnityFx.Mvc.csproj
+++ b/src/UnityFx.Mvc/UnityFx.Mvc.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>net35;net46;netstandard2.0</TargetFrameworks>
+		<TargetFrameworks>net46;netstandard2.0</TargetFrameworks>
 		<Description>MVC framwork for Unity3d.</Description>
 		<Company />
 		<Authors>Alexander Bogarsukov</Authors>
