--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "src/CodingConventions"]
-	path = src/CodingConventions
+[submodule "CodingConventions"]
+	path = CodingConventions
 	url = https://github.com/Arvtesh/CodingConventions
