--- a/Assets/Plugins/UnityFx.Mvc/Tests/Editor/UnityFx.Mvc.Editor.Tests.asmdef
+++ b/Assets/Plugins/UnityFx.Mvc/Tests/Editor/UnityFx.Mvc.Editor.Tests.asmdef
@@ -1,22 +1,20 @@
 {
     "name": "UnityFx.Mvc.Editor.Tests",
     "references": [
-        "UnityEngine.TestRunner",
-        "UnityEditor.TestRunner",
         "UnityFx.Mvc"
+    ],
+    "optionalUnityReferences": [
+        "TestAssemblies"
     ],
     "includePlatforms": [
         "Editor"
     ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
-    "overrideReferences": true,
-    "precompiledReferences": [
-        "nunit.framework.dll"
-    ],
+    "overrideReferences": false,
+    "precompiledReferences": [],
     "autoReferenced": false,
     "defineConstraints": [
         "UNITY_INCLUDE_TESTS"
-    ],
-    "versionDefines": []
+    ]
 }
