--- a/.editorconfig
+++ b/.editorconfig
@@ -5,9 +5,10 @@ root = true
 
 # Use tabs for indentation.
 [*]
-indent_style = tab
-trim_trailing_whitespace = true
+charset = utf-8
+end_of_line = crlf
 insert_final_newline = true
+indent_style = tab
 # (Please don't specify an indent_size here; that has too many unintended consequences.)
 
 # Code files
@@ -35,7 +36,6 @@ indent_size = 2
 [*.{cs,vb}]
 # Sort using and Import directives with System.* appearing first
 dotnet_sort_system_directives_first = true
-
 # Avoid "this." and "Me." if not necessary
 dotnet_style_qualification_for_field = false:suggestion
 dotnet_style_qualification_for_property = false:suggestion
