--- a/.github/workflows/npmpublish.yml
+++ b/.github/workflows/npmpublish.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           node-version: 12
           registry-url: https://registry.npmjs.org/
-      - run: npm publish Packages/UnityFx.Mvc
+      - run: npm publish Assets/Plugins/UnityFx.Mvc
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
 
@@ -26,6 +26,6 @@ jobs:
         with:
           node-version: 12
           registry-url: https://npm.pkg.github.com/
-      - run: npm publish Packages/UnityFx.Mvc
+      - run: npm publish Assets/Plugins/UnityFx.Mvc
         env:
           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
