Added MessageBox tests (#9)

--- a/Assets/Plugins/UnityFx.Mvc/Tests/Editor/UnityFx.Mvc.Editor.Tests.asmdef
+++ b/Assets/Plugins/UnityFx.Mvc/Tests/Editor/UnityFx.Mvc.Editor.Tests.asmdef
@@ -2,7 +2,8 @@
     "name": "UnityFx.Mvc.Editor.Tests",
     "references": [
         "UnityFx.Mvc.Abstractions",
-        "UnityFx.Mvc"
+        "UnityFx.Mvc",
+        "UnityFx.Mvc.Extensions"
     ],
     "optionalUnityReferences": [
         "TestAssemblies"
