Moved command-related code to UnityFx.Mvc.Commands assembly

--- a/Assets/Plugins/UnityFx.Mvc/Editor/UnityFx.Mvc.Editor.asmdef
+++ b/Assets/Plugins/UnityFx.Mvc/Editor/UnityFx.Mvc.Editor.asmdef
@@ -2,6 +2,7 @@
     "name": "UnityFx.Mvc.Editor",
     "references": [
         "UnityFx.Mvc.Abstractions",
+        "UnityFx.Mvc.Commands",
         "UnityFx.Mvc"
     ],
     "optionalUnityReferences": [],
