--- a/Assets/Plugins/UnityFx.Mvc/Runtime/Extensions/UnityFx.Mvc.Extensions.asmdef
+++ b/Assets/Plugins/UnityFx.Mvc/Runtime/Extensions/UnityFx.Mvc.Extensions.asmdef
@@ -1,7 +1,8 @@
 {
     "name": "UnityFx.Mvc.Extensions",
     "references": [
-        "UnityFx.Mvc.Abstractions"
+        "UnityFx.Mvc.Abstractions",
+        "UnityFx.Mvc.Commands"
     ],
     "optionalUnityReferences": [],
     "includePlatforms": [],
