--- a/.github/workflows/npmpublish.yml
+++ b/.github/workflows/npmpublish.yml
@@ -14,6 +14,9 @@ jobs:
         with:
           node-version: 12
           registry-url: https://registry.npmjs.org/
-      - run: npm publish Assets/Plugins/UnityFx.Mvc
+      - run: |
+          npm publish Assets/Plugins/UnityFx.Mvc
+          npm publish Assets/Plugins/UnityFx.Mvc.UGUI
+          npm publish Assets/Plugins/UnityFx.Mvc.Design
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
