Project structure changes

--- a/Packages/UnityFx.Mvc.UGUI/Editor/UnityFx.Mvc.UGUI.Editor.asmdef
+++ b/Packages/UnityFx.Mvc.UGUI/Editor/UnityFx.Mvc.UGUI.Editor.asmdef
@@ -3,6 +3,7 @@
     "references": [
         "UnityFx.Mvc.Commands",
         "UnityFx.Mvc.Abstractions",
+        "UnityFx.Mvc",
         "UnityFx.Mvc.Editor",
         "UnityFx.Mvc.UGUI"
     ],
