--- a/Packages/UnityFx.Mvc.UGUI/Runtime/UnityFx.Mvc.UGUI.asmdef
+++ b/Packages/UnityFx.Mvc.UGUI/Runtime/UnityFx.Mvc.UGUI.asmdef
@@ -4,6 +4,7 @@
         "UnityEngine.UI",
         "UnityFx.Mvc.Commands",
         "UnityFx.Mvc.Abstractions",
+        "UnityFx.Mvc",
         "UnityFx.Mvc.Extensions"
     ],
     "includePlatforms": [],
