Moved commands code to UnityFx.Abstractions

--- a/Packages/UnityFx.Mvc/Runtime/Abstractions/UnityFx.Mvc.Abstractions.asmdef
+++ b/Packages/UnityFx.Mvc/Runtime/Abstractions/UnityFx.Mvc.Abstractions.asmdef
@@ -1,14 +1,13 @@
 {
     "name": "UnityFx.Mvc.Abstractions",
-    "references": [
-        "UnityFx.Mvc.Commands"
-    ],
-    "optionalUnityReferences": [],
+    "references": [],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
     "precompiledReferences": [],
     "autoReferenced": true,
-    "defineConstraints": []
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
